dhall/tests/type-inference/failure/unit/Sort.txt
Type error: error: Sort does not have a type
 --> <current file>:1:0
  |
1 | Sort
  | ^^^^ Sort does not have a type
  |
